<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_all_cities"
        android:name="fr.dutapp.tenky.ui.all_cities.AllCitiesFragment"
        android:label="@string/title_all_cities"
        tools:layout="@layout/fragment_all_cities" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.dutapp.tenky.ui.home.HomeFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="fr.dutapp.tenky.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>