<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewBG"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/bg_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sunny" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weeklyWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#99ACACAC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentWeather">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_weather_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/more_info"
                android:layout_width="410dp"
                android:layout_height="228dp"
                android:layout_marginTop="20dp"
                android:background="#99ACACAC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weeklyWeather">

                <TextView
                    android:id="@+id/textViewSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/title_sunrise"
                    app:layout_constraintStart_toEndOf="@+id/imageViewSunrise"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewSunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/title_wind_speed"
                    app:layout_constraintStart_toStartOf="@+id/textViewSunrise"
                    app:layout_constraintTop_toBottomOf="@+id/textViewWind" />

                <TextView
                    android:id="@+id/textViewWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/title_sunset"
                    app:layout_constraintStart_toStartOf="@+id/textViewSunrise"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSunrise" />

                <ImageView
                    android:id="@+id/imageViewSunrise"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic__08_sunrise"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewSunset"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic__07_sunset"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewSunrise" />

                <ImageView
                    android:id="@+id/imageViewWindSpeed"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic__04_wind"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewSunset" />

                <ImageView
                    android:id="@+id/imageViewWindSpeed2"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic__27_humidity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewWindSpeed" />

                <TextView
                    android:id="@+id/textViewSunriseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"
                    android:text="@string/title_no_data"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewSunrise"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textViewSunsetValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"
                    android:text="@string/title_no_data"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewWind"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textViewWindSpeedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"
                    android:text="@string/title_no_data"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textViewSunset"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="@string/title_humidity"
                    app:layout_constraintStart_toStartOf="@+id/textViewSunrise"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSunset" />

                <TextView
                    android:id="@+id/textViewHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="64dp"
                    android:text="@string/title_no_data"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/currentWeather"
                android:layout_width="412dp"
                android:layout_height="226dp"
                android:background="#99ACACAC"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewFeelsLike"
                    android:layout_width="71dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_no_data"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/title_feels_like"
                    app:layout_constraintStart_toStartOf="@+id/textViewDesc"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/main_activity_recycler_view"
                    android:layout_width="410dp"
                    android:layout_height="71dp"
                    android:layout_marginTop="156dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageCurrentWea"
                    android:layout_width="82dp"
                    android:layout_height="71dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/CityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="100dp"
                    android:text="@string/title_no_data"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/TemperatureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/title_no_data"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/imageCurrentWea"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewDesc"
                    android:layout_width="161dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textAlignment="inherit"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/TemperatureValue"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>